hydroflow_plus_test/src/local/snapshots/hydroflow_plus_test__local__negation__tests__anti_join_tick_static@graphvis_dot.snap
---
source: hydroflow_plus_test/src/local/negation.rs
expression: "flow.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter({\l    use crate::__staged::local::negation::*;\l    0..5\l})\l", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) map({\l    use crate::__staged::local::negation::*;\l    |v| (v, v)\l})\l", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) source_iter({\l    use crate::__staged::local::negation::*;\l    3..6\l})\l", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) anti_join::<'tick, 'static>()", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) for_each({\l    use crate::__staged::local::negation::*;\l    let output = output;\l    |v: (u32, u32)| {\l        output.send(v.0).unwrap();\l    }\l})\l", shape=house, fillcolor="#ffff88"]
    n6v1 [label="(n6v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n2v1
    n2v1 -> n4v1 [label="pos"]
    n3v1 -> n6v1
    n4v1 -> n5v1
    n6v1 -> n4v1 [label="neg", color=red]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n3v1
        subgraph "cluster_sg_1v1_var_stream_2" {
            label="var stream_2"
            n3v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n1v1
        n2v1
        n4v1
        n5v1
        subgraph "cluster_sg_2v1_var_stream_0" {
            label="var stream_0"
            n1v1
        }
        subgraph "cluster_sg_2v1_var_stream_1" {
            label="var stream_1"
            n2v1
        }
        subgraph "cluster_sg_2v1_var_stream_3" {
            label="var stream_3"
            n4v1
        }
    }
}

